# novellycat

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  log.example.yml  pyproject.toml
.github/workflows/: code_check.yml
src/: __main__.py  config.py  gunicorn_app.py  logging.py
tests/: test_stub.py
