[tool.poetry]
name = "novellycat"
version = "0.1.0"
description = ""
authors = ["Damir Mirasov <damirmirasovmain@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.6.0"
sanic-ext = "^23.6.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.0.291"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = [
    "tests.py",
    "test_*.py",
]
python_classes = ["*Test"]
addopts = ["--cov=src"]


[tool.coverage.report]
omit = [
    "src/__main__.py",
    "*/tests*",
]


[tool.ruff]
line-length = 120
src = ["src"]
